tests/01-syntax/inv_name.ml
let () = LOG "msg" NAME 0 LEVEL DEBUG
